fix my tasks overflow, favorite projects chart width

--- a/client/src/components/favorite-project-chart.styles.scss
+++ b/client/src/components/favorite-project-chart.styles.scss
@@ -1,6 +1,7 @@
 @import '../sass/variables';
 
 .favorite-project-chart {
+  flex: 0 0 44rem;
   display: inline-flex;
   flex-direction: column;
   border: 1px solid $color-gray-light;
