--- a/client/src/components/my-tasks.styles.scss
+++ b/client/src/components/my-tasks.styles.scss
@@ -3,7 +3,7 @@
 .my-tasks {
   padding-top: 3rem;
   padding-left: 1rem;
-  // overflow-y: auto;
+  overflow: auto;
   width: 100%;
 }
 
