--- a/client/src/components/project-overview.styles.scss
+++ b/client/src/components/project-overview.styles.scss
@@ -5,7 +5,6 @@
   margin-top: 3rem;
   padding: 4rem;
   padding-top: 0;
-  overflow: auto;
 
   &__header {
     display: flex;
